# Lyss-chat

./: .env.example  .gitignore  .mcp.json  BACKEND_DEV_CHECKLIST.md  FRONTEND_DEV_CHECKLIST.md  Makefile  PRD.md  PROJECT_STATUS.md  QUICK_START.md  README.md  WINDOWS_SETUP.md  architecture-decisions.md  backend-checklist.md  docker-compose.db.yml  docker-compose.yml  frontend-checklist.md  frontend-design-inspiration.md  memory-service-research.md  memory.json  one-api-analysis.md  prompt.md  todo.md  tool-integration-plan.md  统一技术规范文档.md  规划.md  跨服务通信协议.md
.gemini/: settings.json
backend/: .env.example  Dockerfile.dev  README.md  alembic.ini  pyproject.toml  requirements.txt  run_dev.py
backend/alembic/: env.py
backend/app/: __init__.py  initial_data.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  api.py  auth.py  providers.py  users.py
backend/app/core/: __init__.py  auth.py  config.py  permissions.py  security.py
backend/app/db/: __init__.py  base.py
backend/app/models/: __init__.py  access.py  file.py  model.py  provider.py  usage.py  user.py
backend/app/providers/: __init__.py  factory.py  registry.py
backend/app/providers/base/: __init__.py  provider.py
backend/app/providers/impl/: __init__.py  anthropic_provider.py  deepseek_provider.py  openai_provider.py
backend/app/schemas/: __init__.py  model.py  provider.py  user.py
backend/app/services/: __init__.py  provider_service.py  user_service.py
backend/tests/: __init__.py  test_basic.py
credential-service/: go.mod
docs/: README.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
gateway-service/: go.mod
infrastructure/: docker-compose.yml
read/: 03_Deployment_and_Operations.md
参考文档/: API设计规范.md  (+5 more)
(+168 files in other folders)
