[tool.poetry]
name = "lyss-ai-backend"
version = "0.1.0"
description = "LYSS AI Platform Backend - Multi-AI Provider Aggregation Platform"
authors = ["LYSS Team <team@lyss.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.115.14"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = "2.0.41"
alembic = "^1.13.0"
asyncpg = "^0.29.0"
pydantic = "2.11.7"
pydantic-settings = "^2.6.0"
fastapi-users = {extras = ["sqlalchemy"], version = "13.0.0"}
fastapi-users-db-sqlalchemy = "^6.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
aiofiles = "^24.1.0"
redis = "^5.2.0"
qdrant-client = "1.14.3"
mem0ai = "0.1.94"
cryptography = "^43.0.0"
httpx = "^0.28.0"
python-docx = "^1.1.2"
pypdf2 = "^3.0.1"
tiktoken = "^0.8.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
black = "^24.10.0"
isort = "^5.13.0"
flake8 = "^7.1.0"
mypy = "^1.13.0"
pre-commit = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true